Bug 322134 - Crash onContactChanged
Summary: Crash onContactChanged
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 0.7-beta
Assignee: Telepathy Bugs
URL:
Keywords: drkonqi
: 322058 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-08 22:09 UTC by Daniele E. Domenichelli
Modified: 2013-09-01 19:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.24 KB, text/plain)
2013-07-09 16:31 UTC, Daniele E. Domenichelli
Details
New crash information added by DrKonqi (10.03 KB, text/plain)
2013-07-10 10:46 UTC, Daniele E. Domenichelli
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2013-07-08 22:09:06 UTC
Application: ktp-contactlist (0.6.2)
KDE Platform Version: 4.10.4 (Compiled from sources)
Qt Version: 4.8.4
Operating System: Linux 3.9-1-amd64 x86_64
Distribution: Debian GNU/Linux testing (jessie)

-- Information about the crash:
- What I was doing when the application crashed:
Just opened the contact list, set the accounts online, and clicked hide offline contacts

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f023f898840 (LWP 2700))]

Thread 3 (Thread 0x7f022850a700 (LWP 2702)):
#0  0x00007f023987819d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f023d94c1fc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023d94c324 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0228511a1d in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#4  0x00007f023d96ff35 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f0236e01e0e in start_thread (arg=0x7f022850a700) at pthread_create.c:311
#6  0x00007f023988393d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f0227d09700 (LWP 2703)):
#0  0x00007f023987819d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f023d94c1fc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f023d94c6da in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f023d42a526 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f023d96ff35 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f0236e01e0e in start_thread (arg=0x7f0227d09700) at pthread_create.c:311
#6  0x00007f023988393d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f023f898840 (LWP 2700)):
[KCrash Handler]
#6  QStandardItem::emitDataChanged (this=0x1de7670) at itemviews/qstandarditemmodel.cpp:867
#7  0x00007f023f2454fa in ProxyNode::changed (this=0x1de7670) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:80
#8  0x00007f023f246e0b in KTp::AbstractGroupingProxyModel::onDataChanged (this=0x1df1120, sourceTopLeft=..., sourceBottomRight=...) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:313
#9  0x00007f023f244559 in KTp::AbstractGroupingProxyModel::qt_static_metacall (_o=0x1df1120, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7ffff3347270) at /opt/telepathy/ktp-common-internals/build-amd64/KTp/Models/moc_abstract-grouping-proxy-model.cpp:61
#10 0x00007f023c2e4dcf in QMetaObject::activate (sender=sender@entry=0x1d686c0, m=m@entry=0x7f023c62b5c0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffff3347270) at kernel/qobject.cpp:3539
#11 0x00007f023c32fc57 in QAbstractItemModel::dataChanged (this=this@entry=0x1d686c0, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:164
#12 0x00007f023aa4ed68 in QIdentityProxyModelPrivate::_q_sourceDataChanged (this=<optimized out>, topLeft=..., bottomRight=...) at itemviews/qidentityproxymodel.cpp:472
#13 0x00007f023c2e4dcf in QMetaObject::activate (sender=sender@entry=0x158c270, m=m@entry=0x7f023c62b5c0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffff3347420) at kernel/qobject.cpp:3539
#14 0x00007f023c32fc57 in QAbstractItemModel::dataChanged (this=this@entry=0x158c270, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:164
#15 0x00007f023aa4ed68 in QIdentityProxyModelPrivate::_q_sourceDataChanged (this=<optimized out>, topLeft=..., bottomRight=...) at itemviews/qidentityproxymodel.cpp:472
#16 0x00007f023c2e4dcf in QMetaObject::activate (sender=0x155ba70, m=m@entry=0x7f023c62b5c0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffff33475d0) at kernel/qobject.cpp:3539
#17 0x00007f023c32fc57 in QAbstractItemModel::dataChanged (this=<optimized out>, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:164
#18 0x00007f023dc17a36 in KPeople::PersonsModel::contactChanged (this=0x155ba70, uri=...) at /opt/telepathy/libkpeople/src/personsmodel.cpp:313
#19 0x00007f023dc0efea in KPeople::PersonsModel::qt_static_metacall (_o=0x155ba70, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7ffff3347850) at /opt/telepathy/libkpeople/build-amd64/src/moc_personsmodel.cpp:79
#20 0x00007f023c2e4dcf in QMetaObject::activate (sender=0x15bd070, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffff3347850) at kernel/qobject.cpp:3539
#21 0x00007f023dc0eea7 in KPeople::DataSourceWatcher::contactChanged (this=0x15bd070, _t1=...) at /opt/telepathy/libkpeople/build-amd64/src/moc_datasourcewatcher.cpp:104
#22 0x00007f023dc14858 in KPeople::DataSourceWatcher::onContactChanged (this=0x15bd070, contactId=...) at /opt/telepathy/libkpeople/src/datasourcewatcher.cpp:63
#23 0x00007f023dc0ed62 in KPeople::DataSourceWatcher::qt_static_metacall (_o=0x15bd070, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffff3347a20) at /opt/telepathy/libkpeople/build-amd64/src/moc_datasourcewatcher.cpp:55
#24 0x00007f023c2e4dcf in QMetaObject::activate (sender=0x15812a0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffff3347a20) at kernel/qobject.cpp:3539
#25 0x00007f023dc0fa13 in KPeople::BasePersonsDataSource::contactChanged (this=0x15812a0, _t1=...) at /opt/telepathy/libkpeople/build-amd64/src/moc_basepersonsdatasource.cpp:99
#26 0x00007f023f4ca008 in IMPersonsDataSource::onContactChanged (this=0x15812a0) at /opt/telepathy/ktp-common-internals/KTp/im-persons-data-source.cpp:191
#27 0x00007f023f4ca7f6 in IMPersonsDataSource::qt_static_metacall (_o=0x15812a0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffff3347bf0) at /opt/telepathy/ktp-common-internals/build-amd64/KTp/im-persons-data-source.moc:57
#28 0x00007f023c2e4dcf in QMetaObject::activate (sender=0x1de09a0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffff3347bf0) at kernel/qobject.cpp:3539
#29 0x00007f023c831015 in Tp::Contact::presenceChanged (this=0x1de09a0, _t1=...) at /opt/telepathy/telepathy-qt/build/TelepathyQt/_gen/contact.moc.hpp:154
#30 0x00007f023c8362c7 in Tp::Contact::receiveSimplePresence (this=0x1de09a0, presence=...) at /opt/telepathy/telepathy-qt/TelepathyQt/contact.cpp:1190
#31 0x00007f023c844298 in Tp::ContactManager::onPresencesChanged (this=0x17d3d70, presences=...) at /opt/telepathy/telepathy-qt/TelepathyQt/contact-manager.cpp:1372
#32 0x00007f023c83ae48 in Tp::ContactManager::qt_static_metacall (_o=0x17d3d70, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7ffff3347ed0) at /opt/telepathy/telepathy-qt/build/TelepathyQt/_gen/contact-manager.moc.hpp:97
#33 0x00007f023c2e4dcf in QMetaObject::activate (sender=0x1de7120, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffff3347ed0) at kernel/qobject.cpp:3539
#34 0x00007f023c7e667d in Tp::Client::ConnectionInterfaceSimplePresenceInterface::PresencesChanged (this=0x1de7120, _t1=...) at /opt/telepathy/telepathy-qt/build/TelepathyQt/_gen/cli-connection.moc.hpp:2610
#35 0x00007f023c7e634b in Tp::Client::ConnectionInterfaceSimplePresenceInterface::qt_static_metacall (_o=0x1de7120, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7ffff3348110) at /opt/telepathy/telepathy-qt/build/TelepathyQt/_gen/cli-connection.moc.hpp:2551
#36 0x00007f023c7e662c in Tp::Client::ConnectionInterfaceSimplePresenceInterface::qt_metacall (this=0x1de7120, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7ffff3348110) at /opt/telepathy/telepathy-qt/build/TelepathyQt/_gen/cli-connection.moc.hpp:2600
#37 0x00007f023bf01073 in QDBusConnectionPrivate::deliverCall (this=0x1392560, object=0x1de7120, msg=..., metaTypes=..., slotIdx=8) at qdbusintegrator.cpp:951
#38 0x00007f023c2ea29e in QObject::event (this=0x1de7120, e=<optimized out>) at kernel/qobject.cpp:1194
#39 0x00007f023a52d0ec in QApplicationPrivate::notify_helper (this=this@entry=0x139d070, receiver=receiver@entry=0x1de7120, e=e@entry=0x1f471d0) at kernel/qapplication.cpp:4567
#40 0x00007f023a52fa5b in QApplication::notify (this=this@entry=0x7ffff3348b00, receiver=receiver@entry=0x1de7120, e=e@entry=0x1f471d0) at kernel/qapplication.cpp:4428
#41 0x00007f023ebca66a in KApplication::notify (this=0x7ffff3348b00, receiver=0x1de7120, event=0x1f471d0) at ../../kdeui/kernel/kapplication.cpp:311
#42 0x00007f023c2d03ae in QCoreApplication::notifyInternal (this=0x7ffff3348b00, receiver=receiver@entry=0x1de7120, event=event@entry=0x1f471d0) at kernel/qcoreapplication.cpp:946
#43 0x00007f023c2d3ee1 in sendEvent (event=0x1f471d0, receiver=0x1de7120) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#44 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x12d3400) at kernel/qcoreapplication.cpp:1570
#45 0x00007f023c2d4213 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#46 0x00007f023c2feb53 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#47 postEventSourceDispatch (s=0x1389720) at kernel/qeventdispatcher_glib.cpp:279
#48 0x00007f023d94bf25 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#49 0x00007f023d94c268 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#50 0x00007f023d94c324 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#51 0x00007f023c2fece6 in QEventDispatcherGlib::processEvents (this=0x12d4d60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#52 0x00007f023a5cef9e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#53 0x00007f023c2cf0ff in QEventLoop::processEvents (this=this@entry=0x7ffff3348a90, flags=...) at kernel/qeventloop.cpp:149
#54 0x00007f023c2cf388 in QEventLoop::exec (this=this@entry=0x7ffff3348a90, flags=...) at kernel/qeventloop.cpp:204
#55 0x00007f023c2d4a66 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#56 0x000000000043da1b in main (argc=1, argv=0x7ffff3348dc8) at /opt/telepathy/ktp-contact-list/main.cpp:63

Reported using DrKonqi
Comment 1 David Edmundson 2013-07-08 22:15:14 UTC
How do you have your contacts grouped? Account or group name?

Are you running a kpeople branch? If so could you update the flags (top right of bug report)
Comment 2 Daniele E. Domenichelli 2013-07-08 22:20:37 UTC
Running master branch, but with kpeople installed, and detected by cmake
Contacts grouped by account
Comment 3 Martin Klapetek 2013-07-09 05:18:10 UTC
*** Bug 322058 has been marked as a duplicate of this bug. ***
Comment 4 Daniele E. Domenichelli 2013-07-09 16:31:30 UTC
Created attachment 81028 [details]
New crash information added by DrKonqi

ktp-contactlist (0.6.2) on KDE Platform 4.10.4 using Qt 4.8.4

- What I was doing when the application crashed:

Happened again. This time I set the accounts online and clicked one of the collapsed groups to expand it

-- Backtrace (Reduced):
#6  QStandardItem::emitDataChanged (this=0x2423a50) at itemviews/qstandarditemmodel.cpp:866
#7  0x00007f3c7d1384fa in ProxyNode::changed (this=0x2423a50) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:80
#8  0x00007f3c7d139e0b in KTp::AbstractGroupingProxyModel::onDataChanged (this=0x23d1940, sourceTopLeft=..., sourceBottomRight=...) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:313
#9  0x00007f3c7d137559 in KTp::AbstractGroupingProxyModel::qt_static_metacall (_o=0x23d1940, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fffa56e77d0) at /opt/telepathy/ktp-common-internals/build-amd64/KTp/Models/moc_abstract-grouping-proxy-model.cpp:61
[...]
#11 0x00007f3c7a222c57 in QAbstractItemModel::dataChanged (this=this@entry=0x23ce2d0, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:164
Comment 5 Daniele E. Domenichelli 2013-07-10 10:46:05 UTC
Created attachment 81041 [details]
New crash information added by DrKonqi

ktp-contactlist (0.6.2) on KDE Platform 4.10.4 using Qt 4.8.4

This time I just started the contact list...

-- Backtrace (Reduced):
#6  QStandardItem::emitDataChanged (this=0x1501c50) at itemviews/qstandarditemmodel.cpp:866
#7  0x00007f562c8e44fa in ProxyNode::changed (this=0x1501c50) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:80
#8  0x00007f562c8e5e0b in KTp::AbstractGroupingProxyModel::onDataChanged (this=0x1445ba0, sourceTopLeft=..., sourceBottomRight=...) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:313
#9  0x00007f562c8e3559 in KTp::AbstractGroupingProxyModel::qt_static_metacall (_o=0x1445ba0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fffb5869de0) at /opt/telepathy/ktp-common-internals/build-amd64/KTp/Models/moc_abstract-grouping-proxy-model.cpp:61
[...]
#11 0x00007f56299cec57 in QAbstractItemModel::dataChanged (this=this@entry=0x143fb80, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:164
Comment 6 David Edmundson 2013-09-01 19:18:35 UTC
Git commit fce5a536149cdaaa5945da423570e331207c5d27 by David Edmundson.
Committed on 01/09/2013 at 16:59.
Pushed by davidedmundson into branch 'master'.

Fix crash in AbstractGroupingModel when used in a tree

When removing a proxy item, remove children of that item from the proxy map
REVIEW: 112430

M  +7    -0    KTp/Models/abstract-grouping-proxy-model.cpp

http://commits.kde.org/telepathy-common-internals/fce5a536149cdaaa5945da423570e331207c5d27