Fix crash in AbstractGroupingModel when used in a tree

When removing a proxy item, remove children of that item from the proxy map

BUG: 322134
REVIEW: 112430